# advent-of-code-and-friends

./: .gitignore  AoC 2015 Day 01.r  AoC 2015 Day 03.r  AoC 2015 Day 07.r  AoC 2015 Day 08.r  AoC 2015 Day 09.r  AoC 2015 Day 10.r  AoC 2015 Day 11.r  AoC 2015 Day 13.r  AoC 2015 Day 14.r  AoC 2015 Day 20.r  AoC 2015 Day 21.r  AoC 2015 Day 22.r  AoC 2015 Day 25.r  AoC 2016 Day 03.r  AoC 2016 Day 04.r  AoC 2016 Day 05.r  AoC 2016 Day 07.r  AoC 2016 Day 08.r  AoC 2016 Day 09.r  AoC 2016 Day 1.r  AoC 2016 Day 11 v2.r  AoC 2016 Day 11.r  AoC 2016 Day 12.r  AoC 2016 Day 14.r  AoC 2016 Day 15.r  AoC 2016 Day 18.r  AoC 2016 Day 20.r  AoC 2016 Day 21.r  AoC 2016 Day 22.r  AoC 2016 Day 23.r  AoC 2017 Day 01.r  AoC 2017 Day 02.r  AoC 2017 Day 03.r  AoC 2017 Day 04.r  AoC 2017 Day 10.r  AoC 2017 Day 11.r  AoC 2017 Day 13.r  AoC 2017 Day 14.r  AoC 2017 Day 15.r  (+98 more)
project-euler/: .gitignore  081_path_sum_two_ways2.py  README.md  pyproject.toml
project-euler/solutions/: 001_multiples_of_3_and_5.py  002_even_fibonacci_numbers.py  003_largest_prime_factor.py  004_largest_palindrome_product.py  005_smallest_multiple.py  006_sum_square_difference.py  007_10001st_prime.py  008_largest_product_in_a_series.py  009_special_pythagorean_triplet.py  010_summation_of_primes.py  011_largest_product_in_a_grid.py  012_highly_divisible_triangle_number.py  013_large_sum.py  014_longest_collatz_sequence.py  015_lattice_paths.py  016_power_digit_sum.py  017_number_letter_counts.py  018_maximum_path_sum_1.py  019_counting_sundays.py  020_factorial_digit_sum.py  021_amicable_numbers.py  022_names_scores.py  (+76 more)
(+1062 files in other folders)
